added cors configuration